Added some styling

--- a/index.html
+++ b/index.html
@@ -5,7 +5,29 @@
     <title>Project 2</title>
 
     <style>
+        h1 {
+            font-family: Helvetica, Arial, sans-serif;
+            margin-bottom: 0px;
+        }
 
+        h2 {
+            font-family: Helvetica, Arial, sans-serif;
+            font-size: 14px;
+            font-weight: 100;
+            margin-top: 0px;
+            font-style: italic;
+        }
+
+        p {
+            font-family: Helvetica, Arial, sans-serif;
+            font-size: 16px;
+            margin-top: 30px;
+            margin-bottom: 0px;
+        }
+
+        hr {
+            margin: 30px auto;
+        }
     </style>
 
 </head>
@@ -13,6 +35,7 @@
 <body>
     <h1>New York City Property Prices and Rat Sightings</h1>
     <h2>Visualization Created By: Connie Huang (ch653) and Hunter Greene (hjg43)</h2>
+    <p>This visualization compares annual rat sightings across New York City to _____.</p><hr />
     <svg id="nyc" height="610" width="975" style="border: 2px gray solid"></svg>
 
     <script>
