--- a/index.html
+++ b/index.html
@@ -72,9 +72,9 @@
     const requestData = async function() {
         // Retreive data
         // Rat Sighting data source: https://www.kaggle.com/new-york-city/nyc-rat-sightings
-        const rat_data = await d3.csv("rat_data.csv");
+        const rat_data = await d3.csv("rat_data.csv", d3.autoType);
         // Property Sales data source: https://www.kaggle.com/johnshuford/new-york-city-property-sales
-        const property_data =  await d3.csv("sale_data.csv");
+        const property_data =  await d3.csv("sale_data.csv", d3.autoType);
         // Map Data source: https://data.beta.nyc/dataset/nyc-zip-code-tabulation-areas/resource/6df127b1-6d04-4bb7-b983-07402a2c3f90?view_id=009db939-a288-49db-96f2-8f644d269e08
         // Reshaped to topojson, source: https://mapshaper.org/
         const map_data = await d3.json("nyc_zip_map.json");
@@ -105,38 +105,37 @@
             .attr("class", "outline")
             .attr("d", path)
 
-        // NOTE  - - - Depending on how we map out nyc, we can count #rats by zip/borough in the foreach loop below (could be good for an additional barplot/pie chart)
-
-        // Convert latitude and longitude to pixels
-        rat_data.forEach( (d, i) => {
-            // use projection to convert longitude and latitude into pixels
-            d.position = projection( [d.longitude, d.latitude]);
-        });
-
         // Function for updating map by selected year
         function updateMap(yearKey) {
 
             // Select rat data and sales based on yearKey
-            let rat_by_year = {};
-            let sales_by_year = {};
+            let ratCount = {};
+            let saleCount = {};
             if (yearKey === "All") {
-                rat_by_year = rat_data;
-                sales_by_year = property_data;
+                rat_data.forEach( row => {
+                    if ( ratCount[row.zip] === undefined) {
+                        ratCount[row.zip] = row.count;
+                    }
+                    else { ratCount[row.zip] += row.count; }
+                });
+                property_data.forEach( row => {
+                    if ( saleCount[row.zip] === undefined) {
+                        saleCount[row.zip] = row.price;
+                    }
+                    else { saleCount[row.zip] += row.price; }
+                });
+                // Average price
+                for (let index in saleCount) {
+                    saleCount[index] = Math.round(saleCount[index] / 8); 
+                }
             }
-
-            // Draw rat datapoints
-            map.selectAll("circle.dot").data(rat_by_year)
-              .join("circle")
-              .attr("class", "dot")
-              .attr("r", 1)
-              .attr("cx", d => d.position[0])
-              .attr("cy", d => d.position[1]);
+            console.log(ratCount);
+            console.log(saleCount);
 
             // Get property sale value lists and create color scale for sales
-           let ratVals = d3.map(rat_by_year)
+           // let ratVals = d3.map(ratCount, d => d.count);
 
-           let saleVals = d3.map(sales_by_year, d => d.price);
-           console.log(saleVals)
+           // let saleVals = d3.map(saleCount, d => d.price);
            const colorScale = d3.scaleQuantile()
                                     .domain(Object.values(saleVals))
                                     .range(["#fff","#c2e9eb","#54d6ed","#0e9bd8","#0052cc"]);
