--- a/index.html
+++ b/index.html
@@ -147,16 +147,20 @@
             let colorMatrix = [ ["#e8e8e8", "#ace4e4", "#5ac8c8"],
                                 ["#dfb0d6", "#a5add3", "#5698b9"],
                                 ["#be64ac", "#8c62aa", "#3b4994"] ];
-            let ratScale = d3.scaleQuantile().domain(ratCount).range([0,1,2]);
-            let saleScale = d3.scaleQuantile().domain(saleCount).range([0,1,2]);
+            let ratScale = d3.scaleQuantile().domain(Object.values(ratCount)).range([0,1,2]);
+            let saleScale = d3.scaleQuantile().domain(Object.values(saleCount)).range([0,1,2]);
 
             map.selectAll("path.rat_sales_combined").data(zip_codes.features)
                .join("path")
                .attr("class","rat_sales_combined")
                .attr("d", path)
                .attr("fill", d => {
-             return colorMatrix[ ratScale() ][ saleScale() ];
-            })
+                let ratIndex = ratScale();
+                let saleIndex = saleScale();
+                // Catch null values
+                if (ratIndex === undefined | saleIndex === undefined) { return "";}
+                else {return colorMatrix[ ratIndex ][ saleIndex ];}
+            });
 
         }
         // colorscale
