--- a/index.html
+++ b/index.html
@@ -32,11 +32,25 @@
             margin: 30px auto;
         }
 
-        .outline {
-            stroke: black;
-            stroke-width: 1px;
-            fill: none;
+        #slider {
+        width: 850px;
+        height: 15px;
+        border-radius: 5px;
+        opacity: 0.7;
+        margin-bottom: 0px;
+        padding-bottom: 0px;
         }
+
+        datalist {
+          display: flex;
+          justify-content: space-between;
+          color: black;
+          width: 95%;
+        }
+
+input {
+  width: 50%;
+}
 
     </style>
 
@@ -47,6 +61,21 @@
     <h2>Visualization Created By: Connie Huang (ch653) and Hunter Greene (hjg43)</h2>
     <p>This visualization compares annual rat sightings across New York City to _____.</p><hr />
     <svg id="nyc" height="850" width="850" style="border: 2px gray solid"></svg>
+
+    <div id="slider_div">
+        <p id="slider_text"> View rat sightings by year </p>
+        <input type="range" id="slider" name="slider" list="year_labels" min="2010" max="2017" step="1">
+        <datalist id="year_labels">
+          <option value="2010" label="2010"></option>
+          <option value="2011" label="2011"></option>
+          <option value="2012" label="2012"></option>
+          <option value="2013" label="2013"></option>
+          <option value="2014" label="2014"></option>
+          <option value="2015" label="2015"></option>
+          <option value="2016" label="2016"></option>
+          <option value="2017" label="2017"></option>
+        </datalist>
+    </div>
 
     <script>
 
@@ -149,6 +178,9 @@
 
         // NOTE -- Insert slider here
         updateMap("All");
+        d3.select("#slider").on("input", function() {
+
+        })
 
     }
     requestData();
