--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
         #slider_div {
             font-family: Helvetica, Arial, sans-serif;
-            width: 700px;
+            width: 35%;
             margin: 0px auto;
         }
 
